<resources>
    <string name="app_name">NaCaRe-Ke</string>
    <string name="pss_title">NaCaRe-Ke</string>
    <string name="syncing">Syncing Your Configurations</string>
    <string name="navigation">navigation</string>
    <string name="app_name_refined">NaCaRe-Ke Mobile App</string>
    <string name="base_url">navigation</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="server_url">Server URL</string>
    <string name="pss_insight_v2_data_entry">NaCaRe-Ke DATA ENTRY</string>
    <string name="quick_actions">Registered Patients</string>
    <string name="your_submissions">Your Submissions</string>
    <string name="new_survey">New Data Entry</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="safe_draft">Save Draft</string>
    <string name="please_answer_these_questions">Please answer these questions</string>
    <string name="_20_done">20% done</string>
    <string name="select_year">Select Year*</string>
    <string name="next">Next</string>
    <string name="current_page">Page 1/2</string>
    <string-array name="navigation_drawer_items_array">
        <item>Connect</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string-array name="submit_options">
        <item>Draft</item>
        <item>Submit</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_organization">Organization</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="your_responses_have_been_submitted_successfully">Your responses have been submitted successfully</string>
    <string name="address_123_main_st_pss_kenya">Address: 123 Main St, PSS Kenya</string>
    <string name="phone_254_700_111_222">Phone: +254 700 111–222</string>
    <string name="email_apps_intellisoftkenya_com">Email: apps@intellisoftkenya.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="image_upload">Image Upload</string>
    <string name="app_in_progress">In Progress</string>
    <string name="select_organization">Select Organization</string>
    <string name="action_accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete_local_data">Delete Local Data</string>
    <string name="delete_local_data_message">Non synchronized data will be lost. Do you really want to continue?</string>
    <string name="is_there_a_national_list_of_essential_medicines">Is there a national list of essential medicines?</string>
    <string name="period">Year</string>
    <string name="user_comment">User Comment</string>
    <string name="user_attachment">Attachment</string>
    <string name="set_new_pin">Set New Pin</string>
    <string name="unblock">Unblock Session</string>
    <string name="forgot">Forgot Pin? Reset</string>
    <string name="this_is_the_information_field">This is the information field.</string>
    <string name="ps01_definition">PS01 Definition</string>
    <string name="reference_sheet">Reference Sheet</string>
    <string name="fill_assessment_question">Fill Assessment Question</string>
    <string name="app_international">International Benchmark</string>
    <string name="app_national">National Target</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Cases</string>
    <string name="menu_slideshow">Case Details</string>
    <string name="action_add">Patient Registration</string>
    <string name="action_patient_id">Patient ID\n</string>
    <string name="action_secondary_id">Secondary ID</string>
    <string name="action_submit">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_admission">Date of Admission</string>
    <string name="date_of_surgery">Date of Surgery</string>
    <string name="select_surgical_procedure">Select Surgical Procedure</string>
    <string name="hip_replacement">Hip replacement</string>
    <string name="knee_replacement">Knee replacement</string>
    <string name="orif">ORIF</string>
    <string name="acl_reconstruction_surgery">ACL reconstruction surgery</string>
    <string name="shoulder_replacement_surgery">Shoulder replacement surgery</string>
    <string name="joint_arthroscopy">Joint arthroscopy</string>
    <string name="ankle_repair">Ankle repair</string>
    <string name="joint_fusion_surgery">Joint fusion surgery</string>
    <string name="spinal_surgery">Spinal surgery</string>
    <string name="other_specify">Other (specify)</string>
    <string name="if_other_specify">If other Specify</string>
    <string name="surgery_location">Surgery Location</string>
    <string name="orthopedic_ward">Orthopedic ward</string>
    <string name="general_surgery_ward">General surgery ward</string>
    <string name="emergency">Emergency</string>
    <string name="elective">Elective</string>
    <string name="scheduling">Scheduling</string>
    <string name="action_details">Patient Details</string>
    <string name="action_peri_operative">Perioperative Data</string>
    <string name="patient_preparation">Patient Preparation</string>
    <string name="surgical_skin_preparation">Surgical Skin Preparation</string>
    <string name="surgical_hand_preparation">Surgical Hand Preparation</string>
    <string name="pre_and_post_operative_antibiotics">Pre and Post Operative Antibiotics</string>
    <string name="post_operative_data">POST-OPERATIVE DATA</string>
    <string name="surgical_site_infection_pathogen_information">SURGICAL SITE INFECTION PATHOGEN INFORMATION</string>
    <string name="microbiology_findings_and_ast_testing_results">Microbiology Findings and AST Testing Results</string>
    <string name="antimicrobial_susceptibility_testing">Antimicrobial Susceptibility Testing</string>
    <string name="outcome">OUTCOME</string>
    <string name="hair_removal_date">Hair removal date</string>
    <string name="peri_operative_data">PERI-OPERATIVE DATA</string>
    <string name="pre_op_bath_shower">Pre-op bath/shower</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="antibacterial_soap_used">Antibacterial soap used</string>
    <string name="date_of_outcome">Date of outcome</string>
    <string name="patient_status">Patient status</string>
    <string name="patient_status_at_outcome">Patient status at outcome</string>
    <string name="discharged_from_surgical_care">Discharged from surgical care</string>
    <string name="transferred_to_another_ward_within_the_hospital">Transferred to another ward within the hospital</string>
    <string name="transferred_to_another_hospital">Transferred to another hospital</string>
    <string name="died">Died</string>
    <string name="absconded">Absconded</string>
    <string name="unknown">Unknown</string>
    <string name="susceptible">Susceptible</string>
    <string name="resistant">Resistant</string>
    <string name="intermediate">Intermediate</string>
    <string name="ceftriaxone">Ceftriaxone</string>
    <string name="ceftazidime">Ceftazidime</string>
    <string name="vancomycin">Vancomycin</string>
    <string name="tobramycin">Tobramycin</string>
    <string name="penicillin">Penicillin</string>
    <string name="norfloxacin">Norfloxacin</string>
    <string name="nalidixic_acid">Nalidixic Acid</string>
    <string name="gentamycin">Gentamycin</string>
    <string name="erythromycin">Erythromycin</string>
    <string name="cefotaxime">Cefotaxime</string>
    <string name="colistin_sulphate">Colistin Sulphate</string>
    <string name="ciprofloxacin">Ciprofloxacin</string>
    <string name="cephalexin">Cephalexin</string>
    <string name="cotrimoxazole">Cotrimoxazole</string>
    <string name="cloxacillin">Cloxacillin</string>
    <string name="ampicillin">Ampicillin</string>
    <string name="amikacin">Amikacin</string>
    <string name="amoxicillin">Amoxicillin</string>
    <string name="culture_findings">Culture Findings</string>
    <string name="action_organism_other">If other Specify</string>
    <string name="action_acinetobacter_other">Acinetobacter Other</string>
    <string name="action_enterobacter_other">Enterobacter  Other</string>
    <string name="action_pathogen_other">Other pathogen</string>
    <string name="action_other">If other, specify</string>
    <string name="other">Other</string>
    <string name="collection_date">Collection Date</string>
    <string name="reception_date">Reception Date</string>
    <string name="processing_date">Processing Date</string>
    <string name="surgical_site_infection_pathogen_information_0">SURGICAL SITE INFECTION PATHOGEN INFORMATION</string>
    <string name="type_of_laboratory_confirmed_bsi">Type of laboratory-confirmed BSI:</string>
    <string name="known_pathogen">Known pathogen</string>
    <string name="common_commensal_from_2_cultures_from_different_sites_times"><![CDATA[Common commensal (from >2 cultures from different sites/times)]]></string>
    <string name="specimen">Specimen</string>
    <string name="pus">Pus</string>
    <string name="exudate">Exudate</string>
    <string name="tissue">Tissue</string>
    <string name="purulent_drainage">Purulent drainage</string>
    <string name="bone">Bone</string>
    <string name="findings_date">Findings Date</string>
    <string name="organism_isolated">Organism isolated</string>
    <string name="no_growth">No growth</string>
    <string name="staphylococcus_coagulase_negative">Staphylococcus coagulase-negative</string>
    <string name="enterococcus_faecium">Enterococcus faecium</string>
    <string name="enterococcus_faecalis">Enterococcus faecalis</string>
    <string name="enterococcus_spp_no_species_identified">Enterococcus spp (no species identified)</string>
    <string name="staphylococcus_aureus">Staphylococcus aureus</string>
    <string name="acinetobacter_baumannii">Acinetobacter baumannii</string>
    <string name="acinetobacter_spp_no_species_identified">Acinetobacter spp (no species identified)</string>
    <string name="escherichia_coli">Escherichia coli</string>
    <string name="healthy_person">Healthy person</string>
    <string name="hypertension">Hypertension</string>
    <string name="diabetes">Diabetes</string>
    <string name="copd">COPD</string>
    <string name="major_trauma">Major trauma</string>
    <string name="age_75_yrs"><![CDATA[Age >75 yrs]]></string>
    <string name="immunocompromised">Immunocompromised</string>
    <string name="_7_multiple_fractures">7 Multiple fractures</string>
    <string name="heart_failure">Heart Failure</string>
    <string name="kidney_failure">Kidney failure</string>
    <string name="intervention">Intervention</string>
    <string name="reported_cases">Reported Cases</string>
    <string name="register_new">Register new Cancer</string>
    <string name="action">Action</string>
    <string name="status">Status</string>
    <string name="date_captured">Date Captured</string>
    <string name="date_created">Date Created</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="diagnosis">Diagnosis</string>
</resources>