<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/yearTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date_captured"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/firstNameTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/middleNameTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/action"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>