<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="@dimen/_15dp"
    tools:context="com.intellisoft.nacare.main.ui.home.EventsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textViewWithArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:text="@string/menu_home"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/baseline_arrow_back_ios_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_proceed"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_15dp"
        android:gravity="center"
        android:text="@string/register_new"
        app:icon="@android:drawable/ic_menu_search" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/reported_cases" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:paddingTop="@dimen/_5dp"
        android:paddingBottom="@dimen/_5dp">

        <include
            layout="@layout/item_cases_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>