<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.workflows.peri.PeriFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ln_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_15dp">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/blue_background"
                android:contentDescription="Circular ImageView 1" />

            <!-- Circular ImageView 2 -->
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_background"
                android:contentDescription="Circular ImageView 2" />

            <!-- Circular ImageView 3 -->
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_background"
                android:contentDescription="Circular ImageView 3" />

            <!-- Circular ImageView 4 -->
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_background"
                android:contentDescription="Circular ImageView 4" />

            <!-- Circular ImageView 5 -->
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/circular_background"
                android:contentDescription="Circular ImageView 5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ivPayLoans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_basic_button"
                android:padding="@dimen/_10dp"
                android:text="1" />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="@dimen/_15dp"
                android:text="Peri-Operative"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/riskFactorsTitle"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Risk Factors"
            android:textSize="18sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBoxHealthyPerson"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/healthy_person" />

            <CheckBox
                android:id="@+id/checkBoxHypertension"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hypertension" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBoxDiabetes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diabetes" />

            <CheckBox
                android:id="@+id/checkBoxCOPD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/copd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBoxMajorTrauma"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/major_trauma" />

            <CheckBox
                android:id="@+id/checkBoxAgeOver75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age_75_yrs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBoxImmunocompromised"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/immunocompromised" />

            <CheckBox
                android:id="@+id/checkBoxMultipleFractures"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7_multiple_fractures" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkBoxHeartFailure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/heart_failure" />

            <CheckBox
                android:id="@+id/checkBoxKidneyFailure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kidney_failure" />
        </LinearLayout>

        <TextView
            android:id="@+id/bloodGlucoseTitle"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Blood Glucose Measured?"
            android:textSize="18sp"
            android:textStyle="normal" />

        <RadioGroup
            android:id="@+id/bloodGlucoseRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButtonBloodGlucoseNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No" />

            <RadioButton
                android:id="@+id/radioButtonBloodGlucoseYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yes" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/glucoseHolder"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Blood glucose level"
            android:visibility="gone"
            app:boxStrokeColor="@drawable/textinputlayout_border"
            app:hintTextColor="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_glucose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/interventionHolder"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/intervention"
            android:visibility="gone"
            app:boxStrokeColor="@drawable/textinputlayout_border"
            app:hintTextColor="@color/purple_200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_intervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:textSize="12sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>